[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/rooms/Intro.gd" type="Script" id=1]
[ext_resource path="res://notosans-reg.tres" type="DynamicFont" id=2]

[node name="Intro" type="Panel"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 383.0
margin_top = 259.0
margin_right = 576.0
margin_bottom = 341.0
custom_constants/separation = 28

[node name="Label1" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 193.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 2 )
text = "There once was a girl"
align = 1

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 193.0
margin_bottom = 82.0
custom_fonts/font = ExtResource( 2 )
align = 1

[node name="Timer" type="Timer" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
